<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:shimmer_base_color="@color/secondaryColor"
            app:shimmer_colored="true"
            app:shimmer_dropoff="@integer/config_navAnimTime"
            app:shimmer_highlight_color="@color/secondaryLightColor"
            app:shimmer_shape="linear">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/item_detail_placeholder" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/layout_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <ToggleButton
                android:id="@+id/btn_favorite"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/favorite_button"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:src="@drawable/ic_baseline_favorite_24"
                android:textOff=""

                android:textOn="" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_poster_tv"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="20dp" />

            <TextView
                android:id="@+id/tv_title_tv"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/dummy_title"
                android:textAlignment="center"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/tv_rating_tv"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/dummy_rating"
                android:textColor="@color/secondaryLightColor"
                android:textSize="30sp" />

            <RatingBar
                android:id="@+id/ratingbar_tv"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:numStars="5"
                android:rating="4.7"
                android:theme="@style/RatingBar" />

            <TextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/overview"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/dummy_overview"
                android:textColor="@color/primaryTextColor" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_episode"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/primaryLightColor"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/episode"
                            android:textColor="@color/primaryTextColor" />

                        <TextView
                            android:id="@+id/tv_episode"
                            style="@style/TextContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/dummy_number" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_season"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/primaryLightColor"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/seasons"
                            android:textColor="@color/primaryTextColor" />

                        <TextView
                            android:id="@+id/tv_seasons"
                            style="@style/TextContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/dummy_number" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>