...

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>
<!--        Trending Rv-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_trending" />
...

                <include layout="@layout/item_movie" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
<!--        Discover Rv-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie_discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            tools:listitem="@layout/item_movie" />
...
